After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697171 - crash: assertion failed: (gtk_widget_get_visible (GTK_WIDGET (completion->priv->main_window)))
crash: assertion failed: (gtk_widget_get_visible (GTK_WIDGET (completion->pri...
Status: RESOLVED FIXED
Product: gtksourceview
Classification: Platform
Component: General
3.8.x
Other Linux
: Normal critical
: ---
Assigned To: GTK Sourceview maintainers
GTK Sourceview maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-03 12:38 UTC by Carl-Anton Ingmarsson
Modified: 2013-04-03 14:09 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Carl-Anton Ingmarsson 2013-04-03 12:38:33 UTC
I'm getting this crash quite often in Anjuta with gtksourceview from git.

GtkSourceView:ERROR:gtksourcecompletion.c:1301:update_active_completion: assertion failed: (gtk_widget_get_visible (GTK_WIDGET (completion->priv->main_window)))

Backtrace:

  • #0 raise
    from /lib64/libc.so.6
  • #1 abort
    from /lib64/libc.so.6
  • #2 g_assertion_message
  • #3 g_assertion_message_expr
  • #4 update_active_completion
    at gtksourcecompletion.c line 1301
  • #5 buffer_insert_text_cb
    at gtksourcecompletion.c line 1345
  • #6 _gtk_marshal_VOID__BOXED_STRING_INT
    at gtkmarshalers.c line 3175
  • #7 g_closure_invoke
    at gclosure.c line 777
  • #8 signal_emit_unlocked_R
    at gsignal.c line 3654
  • #9 g_signal_emit_valist
    at gsignal.c line 3328
  • #10 g_signal_emit
    at gsignal.c line 3384
  • #11 gtk_text_buffer_emit_insert
    at gtktextbuffer.c line 926
  • #12 gtk_text_buffer_insert_interactive
    at gtktextbuffer.c line 1018
  • #13 gtk_text_buffer_insert_interactive_at_cursor
    at gtktextbuffer.c line 1056
  • #14 gtk_text_view_commit_text
    at gtktextview.c line 8174
  • #15 gtk_text_view_commit_handler
    at gtktextview.c line 8133
  • #16 g_cclosure_marshal_VOID__STRINGv
    at gmarshal.c line 1004
  • #17 _g_closure_invoke_va
    at gclosure.c line 840
  • #18 g_signal_emit_valist
    at gsignal.c line 3234
  • #19 g_signal_emit_by_name
    at gsignal.c line 3424
  • #20 gtk_im_multicontext_commit_cb
    at gtkimmulticontext.c line 527
  • #21 g_cclosure_marshal_VOID__STRINGv
    at gmarshal.c line 1004
  • #22 _g_closure_invoke_va
    at gclosure.c line 840
  • #23 g_signal_emit_valist
    at gsignal.c line 3234
  • #24 g_signal_emit_by_name
    at gsignal.c line 3424
  • #25 gtk_im_context_simple_commit_char
    at gtkimcontextsimple.c line 192
  • #26 no_sequence_matches
    at gtkimcontextsimple.c line 814
  • #27 gtk_im_context_simple_filter_keypress
    at gtkimcontextsimple.c line 1144
  • #28 gtk_im_context_filter_keypress
    at gtkimcontext.c line 518
  • #29 gtk_im_multicontext_filter_keypress
    at gtkimmulticontext.c line 363
  • #30 gtk_im_context_filter_keypress
    at gtkimcontext.c line 518
  • #31 gtk_text_view_key_press_event
    at gtktextview.c line 4759
  • #32 gtk_source_view_key_press_event
    at gtksourceview.c line 3497
  • #33 anjuta_view_key_press_event
    at anjuta-view.c line 647
  • #34 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 85
  • #35 g_type_class_meta_marshal
    at gclosure.c line 970
  • #36 g_closure_invoke
    at gclosure.c line 777
  • #37 signal_emit_unlocked_R
  • #38 g_signal_emit_valist
    at gsignal.c line 3338
  • #39 g_signal_emit
    at gsignal.c line 3384
  • #40 gtk_widget_event_internal
    at gtkwidget.c line 6714
  • #41 gtk_widget_event
    at gtkwidget.c line 6371
  • #42 gtk_window_propagate_key_event
    at gtkwindow.c line 6009
  • #43 anjuta_window_key_press_event
    at anjuta-window.c line 806
  • #44 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 85
  • #45 g_type_class_meta_marshal
    at gclosure.c line 970
  • #46 g_closure_invoke
    at gclosure.c line 777
  • #47 signal_emit_unlocked_R
    at gsignal.c line 3622
  • #48 g_signal_emit_valist
    at gsignal.c line 3338
  • #49 g_signal_emit
    at gsignal.c line 3384
  • #50 gtk_widget_event_internal
    at gtkwidget.c line 6714
  • #51 gtk_widget_event
    at gtkwidget.c line 6371
  • #52 propagate_event
    at gtkmain.c line 2490
  • #53 gtk_propagate_event
    at gtkmain.c line 2536
  • #54 gtk_main_do_event
    at gtkmain.c line 1716
  • #55 _gdk_event_emit
    at gdkevents.c line 69
  • #56 gdk_event_source_dispatch
    at gdkeventsource.c line 364
  • #57 g_main_dispatch
    at gmain.c line 3054
  • #58 g_main_context_dispatch
    at gmain.c line 3630
  • #59 g_main_context_iterate
    at gmain.c line 3701
  • #60 g_main_context_iteration
    at gmain.c line 3762
  • #61 g_application_run
    at gapplication.c line 1623
  • #62 main
    at main.c line 54

Comment 1 Sébastien Wilmet 2013-04-03 14:09:24 UTC
This is normally fixed:
https://git.gnome.org/browse/gtksourceview/commit/?id=a0d35d11b67ee71072142728b95baa6ed1cd66d7

The code should be correct even if the window is still hidden (the show signal is not already received).