Completion: remove bad g_assert()

In some circumstances, it is possible to have context != NULL with the
window still hidden.

https://bugzilla.gnome.org/show_bug.cgi?id=697171